[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "sgtpyutils"
version = "0.0.1"
dependencies = [
    "requests",
    "websocket-client",
    "pyyaml",
    "numpy",
    "python-dateutil",
    "typing_extensions",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
