[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgtpyutils"
dynamic = [
    "version",
    "description",
    "readme",
    "requires-python",
    "license",
    "authors",
    "keywords",
    "classifiers",
    "dependencies",
]

[tool.setuptools.packages.find]
exclude = ["tests", "*.tests", "*.tests.*", "tests.*"]

[tool.setuptools.package-data]
"*" = ["LICENSE", "NOTICE"]
